# control_arm

./: CMakeLists.txt  README.md  check_model.cpp  dxl_motor.hpp  helper_func.hpp  newton_raph.cpp  plot_arm.m  reset_zero.cpp  robot_arm.hpp  robot_model.hpp  test_arm.cpp  test_geome.cpp  test_kinefunc.cpp  test_matplotlib.cpp  test_move.cpp
matlab/: inv_arm.m  jacobi.m  launch_octave.bat  newton_raph.m  plot_amatua.m  plot_arm.m
